@@ -4,3 +4,4 @@ Makefile.in
 const.h
 gozilla
 gozilla.1
+.libs
