@@ -4,3 +4,4 @@ Makefile.in
 const.h
 gtags-cscope
 gtags-cscope.1
+.libs
